[gd_scene load_steps=23 format=3 uid="uid://cfek803gb5tjd"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_t5ux1"]
[ext_resource type="PackedScene" uid="uid://bhr6egicxoker" path="res://Escena/character_body_2d.tscn" id="1_wyb0h"]
[ext_resource type="Texture2D" uid="uid://cbmb5cipyhb2u" path="res://Assets_PixelAdventure/Assets_PixelAdventure/Terrain/Terrain (16x16).png" id="2_4qvqe"]
[ext_resource type="PackedScene" uid="uid://w556n2klpfwt" path="res://Escena/saw.tscn" id="2_veqmh"]
[ext_resource type="Texture2D" uid="uid://cx1qsqa4qwsus" path="res://Assets_PixelAdventure/Assets_PixelAdventure/Parallax/parallax-00.png" id="3_ejttn"]
[ext_resource type="PackedScene" uid="uid://xw4gyt4se872" path="res://Escena/ui_layer.tscn" id="4_62w36"]
[ext_resource type="Script" path="res://Scripts/Cloud.gd" id="4_cg7wv"]
[ext_resource type="Texture2D" uid="uid://d02l7nnnfajd3" path="res://Assets_PixelAdventure/Assets_PixelAdventure/Parallax/parallax-01.png" id="4_wwrrh"]
[ext_resource type="Texture2D" uid="uid://cqgs3aseyvj8m" path="res://Assets_PixelAdventure/Assets_PixelAdventure/Parallax/parallax-02.png" id="5_v5kqc"]
[ext_resource type="Texture2D" uid="uid://cvngflsps17db" path="res://Assets_PixelAdventure/Assets_PixelAdventure/Parallax/parallax-03.png" id="6_8lajd"]
[ext_resource type="Texture2D" uid="uid://owlwdggvbxt3" path="res://Assets_PixelAdventure/Assets_PixelAdventure/Parallax/parallax-04.png" id="7_5dx6m"]
[ext_resource type="AudioStream" uid="uid://bbnfok76rhgun" path="res://Assets_PixelAdventure/Assets_PixelAdventure/Sounds/stranger-things-124008.mp3" id="8_4008g"]
[ext_resource type="PackedScene" uid="uid://dyq45cnukfuao" path="res://Escena/trampoline.tscn" id="9_42nbr"]
[ext_resource type="PackedScene" uid="uid://dxqxrlc3f5y5g" path="res://Escena/start.tscn" id="10_6w211"]
[ext_resource type="PackedScene" uid="uid://b1mlxlxqyosfn" path="res://Escena/exit_area.tscn" id="14_cu8f5"]
[ext_resource type="PackedScene" uid="uid://btghqi26up3su" path="res://Escena/danger_zone.tscn" id="15_7cscb"]
[ext_resource type="PackedScene" uid="uid://ca1536dinf5k5" path="res://Escena/fruit.tscn" id="16_hdyvs"]
[ext_resource type="PackedScene" uid="uid://bo1ecdn51m1x2" path="res://Escena/player_info.tscn" id="18_sedyq"]
[ext_resource type="PackedScene" uid="uid://divxnyglspprq" path="res://Escena/caja.tscn" id="19_8cj8k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_acu6i"]
texture = ExtResource("2_4qvqe")
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0/terrains_peering_bit/bottom_right_corner = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/bottom_left_corner = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/bottom_left_corner = 0
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0/terrains_peering_bit/bottom_left_corner = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_left_corner = 0
9:0/0/terrains_peering_bit/top_side = 0
9:0/0/terrains_peering_bit/top_right_corner = 0
10:0/0 = 0
10:0/0/terrain_set = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0/terrains_peering_bit/right_side = 0
10:0/0/terrains_peering_bit/bottom_right_corner = 0
10:0/0/terrains_peering_bit/top_left_corner = 0
10:0/0/terrains_peering_bit/top_side = 0
10:0/0/terrains_peering_bit/top_right_corner = 0
10:1/0 = 0
10:1/0/terrain_set = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0/terrains_peering_bit/right_side = 0
10:1/0/terrains_peering_bit/bottom_right_corner = 0
10:1/0/terrains_peering_bit/bottom_side = 0
10:1/0/terrains_peering_bit/bottom_left_corner = 0
10:1/0/terrains_peering_bit/top_right_corner = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0/terrains_peering_bit/bottom_right_corner = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/bottom_left_corner = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0/terrains_peering_bit/right_side = 0
7:1/0/terrains_peering_bit/bottom_right_corner = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/bottom_left_corner = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
7:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0/terrains_peering_bit/right_side = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_left_corner = 0
7:2/0/terrains_peering_bit/top_side = 0
7:2/0/terrains_peering_bit/top_right_corner = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_left_corner = 0
8:2/0/terrains_peering_bit/top_side = 0
18:9/0 = 0
18:9/0/terrain_set = 0
18:9/0/terrain = 1
18:9/0/terrains_peering_bit/right_side = 1
18:9/0/terrains_peering_bit/bottom_right_corner = 1
18:9/0/terrains_peering_bit/bottom_side = 1
18:9/0/terrains_peering_bit/bottom_left_corner = 1
18:9/0/terrains_peering_bit/left_side = 1
18:9/0/terrains_peering_bit/top_left_corner = 1
18:9/0/terrains_peering_bit/top_side = 1
18:9/0/terrains_peering_bit/top_right_corner = 1
19:9/0 = 0
19:9/0/terrain_set = 0
19:9/0/terrain = 1
19:9/0/terrains_peering_bit/right_side = 1
19:9/0/terrains_peering_bit/bottom_right_corner = 1
19:9/0/terrains_peering_bit/bottom_side = 1
19:9/0/terrains_peering_bit/bottom_left_corner = 1
19:9/0/terrains_peering_bit/left_side = 1
19:9/0/terrains_peering_bit/top_left_corner = 1
19:9/0/terrains_peering_bit/top_side = 1
19:9/0/terrains_peering_bit/top_right_corner = 1
19:10/0 = 0
19:10/0/terrain_set = 0
19:10/0/terrain = 1
19:10/0/terrains_peering_bit/right_side = 1
19:10/0/terrains_peering_bit/bottom_right_corner = 1
19:10/0/terrains_peering_bit/bottom_side = 1
19:10/0/terrains_peering_bit/bottom_left_corner = 1
19:10/0/terrains_peering_bit/left_side = 1
19:10/0/terrains_peering_bit/top_left_corner = 1
19:10/0/terrains_peering_bit/top_side = 1
19:10/0/terrains_peering_bit/top_right_corner = 1
18:10/0 = 0
18:10/0/terrain_set = 0
18:10/0/terrain = 1
18:10/0/terrains_peering_bit/right_side = 1
18:10/0/terrains_peering_bit/bottom_right_corner = 1
18:10/0/terrains_peering_bit/bottom_side = 1
18:10/0/terrains_peering_bit/bottom_left_corner = 1
18:10/0/terrains_peering_bit/left_side = 1
18:10/0/terrains_peering_bit/top_left_corner = 1
18:10/0/terrains_peering_bit/top_side = 1
18:10/0/terrains_peering_bit/top_right_corner = 1

[sub_resource type="TileSet" id="TileSet_5yydt"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_0/terrain_1/name = "Terrain 1"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_acu6i")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgelf"]
size = Vector2(2004, 55)

[node name="world" type="Node2D"]
script = ExtResource("1_t5ux1")

[node name="tramps" type="Node2D" parent="."]

[node name="Saw" parent="tramps" groups=["tramps"] instance=ExtResource("2_veqmh")]
position = Vector2(346, 33)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-114, -11)
tile_set = SubResource("TileSet_5yydt")
format = 2
layer_0/tile_data = PackedInt32Array(917525, 458752, 2, 851989, 458752, 1, 786453, 458752, 1, 720917, 458752, 1, 917524, 458752, 2, 851988, 458752, 1, 786452, 458752, 1, 720916, 458752, 1, 917523, 458752, 2, 851987, 458752, 1, 786451, 458752, 1, 720915, 458752, 1, 917522, 458752, 2, 851986, 458752, 1, 786450, 458752, 1, 720914, 458752, 1, 917521, 458752, 2, 851985, 458752, 1, 786449, 458752, 1, 720913, 458752, 1, 917520, 458752, 2, 851984, 458752, 1, 786448, 458752, 1, 720912, 458752, 1, 917519, 458752, 2, 851983, 458752, 1, 786447, 458752, 1, 720911, 458752, 1, 917518, 458752, 2, 851982, 458752, 1, 786446, 458752, 1, 720910, 458752, 1, 917517, 458752, 2, 851981, 458752, 1, 786445, 458752, 1, 720909, 458752, 1, 917516, 458752, 2, 851980, 458752, 1, 786444, 458752, 1, 720908, 458752, 1, 917515, 458752, 2, 851979, 458752, 1, 786443, 458752, 1, 720907, 458752, 1, 917514, 458752, 2, 851978, 458752, 1, 786442, 458752, 1, 720906, 458752, 1, 917513, 458752, 2, 851977, 458752, 1, 786441, 458752, 1, 720905, 458752, 1, 917512, 458752, 2, 851976, 458752, 1, 786440, 458752, 1, 720904, 458752, 1, 917511, 458752, 2, 851975, 458752, 1, 786439, 458752, 1, 720903, 458752, 1, 917510, 458752, 2, 851974, 458752, 1, 786438, 458752, 1, 720902, 458752, 1, 917509, 458752, 2, 851973, 458752, 1, 786437, 458752, 1, 720901, 458752, 1, 917508, 458752, 2, 851972, 458752, 1, 786436, 458752, 1, 720900, 458752, 1, 917507, 458752, 2, 851971, 458752, 1, 786435, 458752, 1, 720899, 458752, 1, 917506, 458752, 2, 851970, 458752, 1, 786434, 458752, 1, 720898, 458752, 1, 917505, 393216, 2, 851969, 393216, 1, 786433, 393216, 1, 720897, 393216, 1, 655361, 393216, 0, 655362, 458752, 0, 655363, 458752, 0, 655364, 458752, 0, 655365, 458752, 0, 655366, 458752, 0, 655367, 458752, 0, 655368, 458752, 0, 655369, 458752, 0, 655370, 458752, 0, 655371, 458752, 0, 655372, 458752, 0, 655373, 458752, 0, 655374, 458752, 0, 655375, 458752, 0, 655376, 458752, 0, 655377, 458752, 0, 655378, 458752, 0, 655379, 458752, 0, 655380, 458752, 0, 655381, 458752, 0, 852004, 458752, 1, 786468, 458752, 1, 720932, 458752, 1, 655396, 458752, 1, 589860, 458752, 1, 524324, 524288, 1, 458788, 524288, 1, 393252, 524288, 1, 327716, 524288, 1, 262180, 524288, 1, 852003, 458752, 1, 786467, 458752, 1, 720931, 458752, 1, 655395, 458752, 1, 589859, 458752, 1, 524323, 458752, 1, 458787, 458752, 1, 393251, 458752, 1, 327715, 458752, 1, 262179, 458752, 1, 852002, 458752, 1, 786466, 458752, 1, 720930, 458752, 1, 655394, 458752, 1, 589858, 458752, 1, 524322, 458752, 1, 458786, 458752, 1, 393250, 458752, 1, 327714, 458752, 1, 262178, 458752, 1, 852001, 458752, 1, 786465, 458752, 1, 720929, 458752, 1, 655393, 458752, 1, 589857, 458752, 1, 524321, 458752, 1, 458785, 458752, 1, 393249, 458752, 1, 327713, 458752, 1, 262177, 458752, 1, 852000, 458752, 1, 786464, 458752, 1, 720928, 458752, 1, 655392, 458752, 1, 589856, 458752, 1, 524320, 458752, 1, 458784, 458752, 1, 393248, 458752, 1, 327712, 458752, 1, 262176, 458752, 1, 851999, 458752, 1, 786463, 458752, 1, 720927, 458752, 1, 655391, 458752, 1, 589855, 458752, 1, 524319, 458752, 1, 458783, 458752, 1, 393247, 458752, 1, 327711, 458752, 1, 262175, 458752, 1, 851998, 458752, 1, 786462, 458752, 1, 720926, 458752, 1, 655390, 458752, 1, 589854, 458752, 1, 524318, 458752, 1, 458782, 458752, 1, 393246, 458752, 1, 327710, 458752, 1, 262174, 458752, 1, 851997, 458752, 1, 786461, 458752, 1, 720925, 458752, 1, 655389, 458752, 1, 589853, 458752, 1, 524317, 458752, 1, 458781, 458752, 1, 393245, 458752, 1, 327709, 458752, 1, 262173, 458752, 1, 851996, 458752, 1, 786460, 458752, 1, 720924, 458752, 1, 655388, 458752, 1, 589852, 458752, 1, 524316, 458752, 1, 458780, 458752, 1, 393244, 458752, 1, 327708, 458752, 1, 262172, 458752, 1, 851995, 458752, 1, 786459, 458752, 1, 720923, 458752, 1, 655387, 458752, 1, 589851, 458752, 1, 524315, 458752, 1, 458779, 458752, 1, 393243, 458752, 1, 327707, 458752, 1, 262171, 458752, 1, 851994, 458752, 1, 786458, 458752, 1, 720922, 458752, 1, 655386, 458752, 1, 589850, 458752, 1, 524314, 458752, 1, 458778, 458752, 1, 393242, 458752, 1, 327706, 458752, 1, 262170, 458752, 1, 851993, 458752, 1, 786457, 458752, 1, 720921, 458752, 1, 655385, 458752, 1, 589849, 458752, 1, 524313, 458752, 1, 458777, 458752, 1, 393241, 458752, 1, 327705, 458752, 1, 262169, 458752, 1, 851992, 458752, 1, 786456, 458752, 1, 720920, 458752, 1, 655384, 458752, 1, 589848, 458752, 1, 524312, 458752, 1, 458776, 458752, 1, 393240, 458752, 1, 327704, 458752, 1, 262168, 458752, 1, 851991, 458752, 1, 786455, 458752, 1, 720919, 458752, 1, 655383, 458752, 1, 589847, 458752, 1, 524311, 458752, 1, 458775, 458752, 1, 393239, 458752, 1, 327703, 458752, 1, 262167, 458752, 1, 851990, 458752, 1, 786454, 458752, 1, 720918, 458752, 1, 655382, 458752, 1, 589846, 458752, 1, 524310, 458752, 1, 458774, 458752, 1, 393238, 458752, 1, 327702, 458752, 1, 262166, 458752, 1, 196630, 393216, 0, 196631, 458752, 0, 196632, 458752, 0, 196633, 458752, 0, 196634, 458752, 0, 196635, 458752, 0, 196636, 458752, 0, 196637, 458752, 0, 196638, 458752, 0, 196639, 458752, 0, 196640, 458752, 0, 196641, 458752, 0, 196642, 458752, 0, 196643, 458752, 0, 196644, 524288, 0, 983104, 524288, 2, 917568, 524288, 1, 852032, 524288, 1, 786496, 524288, 1, 720960, 524288, 1, 655424, 524288, 1, 589888, 524288, 1, 983103, 458752, 2, 917567, 458752, 1, 852031, 458752, 1, 786495, 458752, 1, 720959, 458752, 1, 655423, 458752, 1, 589887, 458752, 1, 983102, 458752, 2, 917566, 458752, 1, 852030, 458752, 1, 786494, 458752, 1, 720958, 458752, 1, 655422, 458752, 1, 589886, 458752, 1, 983101, 458752, 2, 917565, 458752, 1, 852029, 458752, 1, 786493, 458752, 1, 720957, 458752, 1, 655421, 458752, 1, 589885, 458752, 1, 983100, 458752, 2, 917564, 458752, 1, 852028, 458752, 1, 786492, 458752, 1, 720956, 458752, 1, 655420, 458752, 1, 589884, 458752, 1, 983099, 458752, 2, 917563, 458752, 1, 852027, 458752, 1, 786491, 458752, 1, 720955, 458752, 1, 655419, 458752, 1, 589883, 458752, 1, 983098, 458752, 2, 917562, 458752, 1, 852026, 458752, 1, 786490, 458752, 1, 720954, 458752, 1, 655418, 458752, 1, 589882, 458752, 1, 983097, 458752, 2, 917561, 458752, 1, 852025, 458752, 1, 786489, 458752, 1, 720953, 458752, 1, 655417, 458752, 1, 589881, 458752, 1, 983096, 458752, 2, 917560, 458752, 1, 852024, 458752, 1, 786488, 458752, 1, 720952, 458752, 1, 655416, 458752, 1, 589880, 458752, 1, 983095, 458752, 2, 917559, 458752, 1, 852023, 458752, 1, 786487, 458752, 1, 720951, 458752, 1, 655415, 458752, 1, 589879, 458752, 1, 983094, 458752, 2, 917558, 458752, 1, 852022, 458752, 1, 786486, 458752, 1, 720950, 458752, 1, 655414, 458752, 1, 589878, 458752, 1, 983093, 458752, 2, 917557, 458752, 1, 852021, 458752, 1, 786485, 458752, 1, 720949, 458752, 1, 655413, 458752, 1, 589877, 458752, 1, 983092, 458752, 2, 917556, 458752, 1, 852020, 458752, 1, 786484, 458752, 1, 720948, 458752, 1, 655412, 458752, 1, 589876, 458752, 1, 983091, 458752, 2, 917555, 458752, 1, 852019, 458752, 1, 786483, 458752, 1, 720947, 458752, 1, 655411, 458752, 1, 589875, 458752, 1, 983090, 458752, 2, 917554, 458752, 1, 852018, 458752, 1, 786482, 458752, 1, 720946, 458752, 1, 655410, 458752, 1, 589874, 458752, 1, 983089, 458752, 2, 917553, 458752, 1, 852017, 458752, 1, 786481, 458752, 1, 720945, 458752, 1, 655409, 458752, 1, 589873, 458752, 1, 983088, 458752, 2, 917552, 458752, 1, 852016, 458752, 1, 786480, 458752, 1, 720944, 458752, 1, 655408, 458752, 1, 589872, 458752, 1, 983087, 458752, 2, 917551, 458752, 1, 852015, 458752, 1, 786479, 458752, 1, 720943, 458752, 1, 655407, 458752, 1, 589871, 458752, 1, 983086, 458752, 2, 917550, 458752, 1, 852014, 458752, 1, 786478, 458752, 1, 720942, 458752, 1, 655406, 458752, 1, 589870, 458752, 1, 983085, 458752, 2, 917549, 458752, 1, 852013, 458752, 1, 786477, 458752, 1, 720941, 458752, 1, 655405, 458752, 1, 589869, 458752, 1, 983084, 458752, 2, 917548, 458752, 1, 852012, 458752, 1, 786476, 458752, 1, 720940, 458752, 1, 655404, 458752, 1, 589868, 458752, 1, 983083, 458752, 2, 917547, 458752, 1, 852011, 458752, 1, 786475, 458752, 1, 720939, 458752, 1, 655403, 458752, 1, 589867, 458752, 1, 983082, 458752, 2, 917546, 458752, 1, 852010, 458752, 1, 786474, 458752, 1, 720938, 458752, 1, 655402, 458752, 1, 589866, 458752, 1, 983081, 458752, 2, 917545, 458752, 1, 852009, 458752, 1, 786473, 458752, 1, 720937, 458752, 1, 655401, 458752, 1, 589865, 458752, 1, 983080, 458752, 2, 917544, 458752, 1, 852008, 458752, 1, 786472, 458752, 1, 720936, 458752, 1, 655400, 458752, 1, 589864, 458752, 1, 983079, 458752, 2, 917543, 458752, 1, 852007, 458752, 1, 786471, 458752, 1, 720935, 458752, 1, 655399, 458752, 1, 589863, 458752, 1, 983078, 458752, 2, 917542, 458752, 1, 852006, 458752, 1, 786470, 458752, 1, 720934, 458752, 1, 655398, 458752, 1, 589862, 458752, 1, 983077, 458752, 2, 917541, 458752, 1, 852005, 458752, 1, 786469, 458752, 1, 720933, 458752, 1, 655397, 458752, 1, 589861, 458752, 1, 524325, 393216, 0, 524326, 458752, 0, 524327, 458752, 0, 524328, 458752, 0, 524329, 458752, 0, 524330, 458752, 0, 524331, 458752, 0, 524332, 458752, 0, 524333, 458752, 0, 524334, 458752, 0, 524335, 458752, 0, 524336, 458752, 0, 524337, 458752, 0, 524338, 458752, 0, 524339, 458752, 0, 524340, 458752, 0, 524341, 458752, 0, 524342, 458752, 0, 524343, 458752, 0, 524344, 458752, 0, 524345, 458752, 0, 524346, 458752, 0, 524347, 458752, 0, 524348, 458752, 0, 524349, 458752, 0, 524350, 458752, 0, 524351, 458752, 0, 524352, 524288, 0, 983076, 458752, 2, 917540, 458752, 1, 983075, 458752, 2, 917539, 458752, 1, 983074, 458752, 2, 917538, 458752, 1, 983073, 458752, 2, 917537, 458752, 1, 983072, 458752, 2, 917536, 458752, 1, 983071, 458752, 2, 917535, 458752, 1, 983070, 458752, 2, 917534, 458752, 1, 983069, 458752, 2, 917533, 458752, 1, 983068, 458752, 2, 917532, 458752, 1, 983067, 458752, 2, 917531, 458752, 1, 983066, 458752, 2, 917530, 458752, 1, 983065, 458752, 2, 917529, 458752, 1, 983064, 458752, 2, 917528, 458752, 1, 983063, 458752, 2, 917527, 458752, 1, 983062, 393216, 2, 917526, 458752, 1)

[node name="Start" parent="." instance=ExtResource("10_6w211")]
position = Vector2(-41, 118)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(-30, 138)

[node name="UILayer" parent="." instance=ExtResource("4_62w36")]

[node name="ExitArea" parent="." instance=ExtResource("14_cu8f5")]
position = Vector2(671, 119)

[node name="Danger_zone" parent="." instance=ExtResource("15_7cscb")]
position = Vector2(-78, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Danger_zone"]
position = Vector2(426, 268)
shape = SubResource("RectangleShape2D_qgelf")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_wyb0h")]
position = Vector2(-31, 62)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
visible = false
scroll_base_offset = Vector2(0, 100)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ejttn")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
visible = false
scroll_base_offset = Vector2(0, 100)

[node name="Cloud" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_mirroring = Vector2(1008, 0)
script = ExtResource("4_cg7wv")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/Cloud"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_wwrrh")

[node name="ParallaxBackground3" type="ParallaxBackground" parent="."]
visible = false
scroll_base_offset = Vector2(0, 100)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground3"]
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground3/ParallaxLayer"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_v5kqc")

[node name="ParallaxBackground4" type="ParallaxBackground" parent="."]
visible = false
scroll_base_offset = Vector2(0, 100)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground4"]
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground4/ParallaxLayer"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_8lajd")

[node name="ParallaxBackground5" type="ParallaxBackground" parent="."]
visible = false
scroll_base_offset = Vector2(0, 100)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground5"]
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground5/ParallaxLayer"]
position = Vector2(1, 6)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_5dx6m")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4008g")
volume_db = -7.195

[node name="fruit" parent="." instance=ExtResource("16_hdyvs")]
position = Vector2(86, 133)

[node name="fruit2" parent="." instance=ExtResource("16_hdyvs")]
position = Vector2(114, 132)
fruitType = "cherry"

[node name="fruit3" parent="." instance=ExtResource("16_hdyvs")]
position = Vector2(58, 133)
fruitType = "banana"

[node name="Trampoline" parent="." instance=ExtResource("9_42nbr")]
position = Vector2(204, 136)

[node name="PlayerInfo" parent="." instance=ExtResource("18_sedyq")]

[node name="Caja" parent="." instance=ExtResource("19_8cj8k")]
position = Vector2(151, 109)
